--- a/homepage_viewer.html
+++ b/homepage_viewer.html
@@ -48,7 +48,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" class="active">LOGIN</a></li>
+						<button class="button button1">Login</button>
+
 
 
 						<!-- <li class="dropdown">
@@ -100,7 +101,7 @@
                     </thead>
 
                     <tbody>
-    
+
                        <!--  <tr>
                             <td class="active" style="text-align: center;" colspan="6">
                                 <strong>Don't have Data</strong>
